# lora-workflow

./: .gitignore  1a_parse_pdf.py  1b_generate_qa_pairs.py  2a_train.py  2b_merge_lora.py  README.md  modelfile_adapter  modelfile_from_merged  pyproject.toml
