[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "docling>=2.31.0",
    "gguf>=0.17.1",
    "litellm>=1.69.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
]

[dependency-groups]
train = [
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.1",
    "peft>=0.18.0",
    "torch>=2.7.0",
    "transformers>=4.57.3",
    "trl>=0.26.1",
]
